Обновление 001: добавление базы данных postgresQL, просмотр гороскопа через HTML.

--- a/HOROSKOP/zodiac/templates/home_page.html
+++ b/HOROSKOP/zodiac/templates/home_page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 {% load static %}
 
-
+<!--ctr+ALT+j create new link -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -15,7 +15,7 @@
 
   <ul>
       {% for lan in header %}
-      <li><a href="/{{ lan }}">{{ lan }}</a></li>
+      <li><a href="/{{lan}}">{{ lan }}</a></li>
       {% endfor %}
 
   </ul>
