--- a/HOROSKOP/zodiac/templates/includes/navbar.html
+++ b/HOROSKOP/zodiac/templates/includes/navbar.html
@@ -1,5 +1,5 @@
 
 <nav>
-    <a href="">Главная</a> |
+    <a href="http://127.0.0.1:8000/">Главная</a> |
     <a href="https://horo.mail.ru/">Источники</a>
 </nav>
